--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,10 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  user: user1
+  password: user1
+  host: localhost
+  port: 5432
 
 development:
   <<: *default
@@ -81,6 +85,4 @@ test:
 #
 production:
   <<: *default
-  database: rails_bestiary_production
-  username: rails_bestiary
-  password: <%= ENV['RAILS_BESTIARY_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
